Remove parentId from Image